--- a/gnumed/gnumed/test-area/java/gnmed/java/quickmed/usecases/test/OtherSummaryPanel.form
+++ b/gnumed/gnumed/test-area/java/gnmed/java/quickmed/usecases/test/OtherSummaryPanel.form
@@ -18,6 +18,7 @@
     <Container class="javax.swing.JSplitPane" name="jSplitPane3">
       <Properties>
         <Property name="orientation" type="int" value="0"/>
+        <Property name="resizeWeight" type="double" value="0.2"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
@@ -174,6 +175,7 @@
         <Container class="javax.swing.JSplitPane" name="jSplitPane1">
           <Properties>
             <Property name="orientation" type="int" value="0"/>
+            <Property name="resizeWeight" type="double" value="0.4"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JSplitPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JSplitPaneSupportLayout$JSplitPaneConstraintsDescription">
@@ -298,6 +300,7 @@
               <SubComponents>
                 <Container class="javax.swing.JSplitPane" name="jSplitPane2">
                   <Properties>
+                    <Property name="resizeWeight" type="double" value="0.4"/>
                     <Property name="oneTouchExpandable" type="boolean" value="true"/>
                   </Properties>
                   <Constraints>
