--- a/gnumed/gnumed/test-area/java/gnmed/java/quickmed/usecases/test/TableWithPopup.form
+++ b/gnumed/gnumed/test-area/java/gnmed/java/quickmed/usecases/test/TableWithPopup.form
@@ -6,6 +6,9 @@
       <SubComponents>
         <MenuItem class="javax.swing.JMenuItem" name="add_jMenuItem1">
           <Properties>
+            <Property name="accelerator" type="javax.swing.KeyStroke" editor="org.netbeans.modules.form.editors.KeyStrokeEditor">
+              <KeyStroke key="A"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="add"/>
           </Properties>
           <Events>
