*** empty log message ***

--- a/gnumed/gnumed/test-area/java/gnmed/java/quickmed/usecases/test/TableWithPopup.form
+++ b/gnumed/gnumed/test-area/java/gnmed/java/quickmed/usecases/test/TableWithPopup.form
@@ -19,6 +19,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="delete"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="deleteObjectAction"/>
+          </Events>
         </MenuItem>
       </SubComponents>
     </Menu>
