--- a/gnumed/gnumed/test-area/java/gnmed/java/quickmed/usecases/test/Testgnmed1.form
+++ b/gnumed/gnumed/test-area/java/gnmed/java/quickmed/usecases/test/Testgnmed1.form
@@ -72,6 +72,11 @@
             </MenuItem>
           </SubComponents>
         </Menu>
+        <Menu class="javax.swing.JMenu" name="windowMenu">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Window"/>
+          </Properties>
+        </Menu>
         <Menu class="javax.swing.JMenu" name="helpMenu">
           <Properties>
             <Property name="text" type="java.lang.String" value="Help"/>
