--- a/gnumed/gnumed/test-area/java/gnmed/java/quickmed/usecases/test/DemographicPanel.form
+++ b/gnumed/gnumed/test-area/java/gnmed/java/quickmed/usecases/test/DemographicPanel.form
@@ -330,6 +330,9 @@
                 </Property>
                 <Property name="name" type="java.lang.String" value="surname"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="surnameFieldActionPerformed"/>
+              </Events>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
                   <GridBagConstraints gridX="-1" gridY="-1" gridWidth="1" gridHeight="1" fill="2" ipadX="20" ipadY="0" insetsTop="0" insetsLeft="4" insetsBottom="0" insetsRight="0" anchor="13" weightX="1.0" weightY="1.0"/>
@@ -695,7 +698,6 @@
         </Component>
         <Component class="javax.swing.JTextField" name="nokTextFeld">
           <Properties>
-            <Property name="text" type="java.lang.String" value="jTextField21"/>
             <Property name="name" type="java.lang.String" value="nok"/>
           </Properties>
           <Events>
@@ -721,7 +723,7 @@
         </Component>
         <Component class="javax.swing.JTextField" name="nokContactTextField14">
           <Properties>
-            <Property name="text" type="java.lang.String" value="jTextField14"/>
+            <Property name="columns" type="int" value="6"/>
             <Property name="name" type="java.lang.String" value="nokContact"/>
           </Properties>
           <Events>
@@ -743,10 +745,10 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout"/>
           <SubComponents>
-            <Component class="javax.swing.JLabel" name="jLabel14">
+            <Component class="javax.swing.JLabel" name="occupationLabel">
               <Properties>
                 <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-                  <ResourceString bundle="" key="occupation" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
+                  <ResourceString bundle="SummaryTerms.properties" key="occupation" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
                 </Property>
               </Properties>
               <Constraints>
@@ -757,7 +759,7 @@
             </Component>
             <Component class="javax.swing.JTextField" name="jobTextField15">
               <Properties>
-                <Property name="text" type="java.lang.String" value="jTextField15"/>
+                <Property name="columns" type="int" value="7"/>
                 <Property name="name" type="java.lang.String" value="occupation"/>
               </Properties>
               <Constraints>
@@ -766,7 +768,7 @@
                 </Constraint>
               </Constraints>
             </Component>
-            <Component class="javax.swing.JLabel" name="jLabel15">
+            <Component class="javax.swing.JLabel" name="workLabel">
               <Properties>
                 <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
                   <ResourceString bundle="SummaryTerms2.properties" key="phone_work" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
@@ -780,7 +782,8 @@
             </Component>
             <Component class="javax.swing.JTextField" name="workPhoneTextField16">
               <Properties>
-                <Property name="text" type="java.lang.String" value="jTextField16"/>
+                <Property name="columns" type="int" value="5"/>
+                <Property name="text" type="java.lang.String" value=" "/>
                 <Property name="name" type="java.lang.String" value="workPhone"/>
               </Properties>
               <Constraints>
@@ -789,7 +792,7 @@
                 </Constraint>
               </Constraints>
             </Component>
-            <Component class="javax.swing.JLabel" name="jLabel17">
+            <Component class="javax.swing.JLabel" name="mobileLabel">
               <Properties>
                 <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
                   <ResourceString bundle="SummaryTerms.properties" key="mobile" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
@@ -803,7 +806,7 @@
             </Component>
             <Component class="javax.swing.JTextField" name="mobilePhoneTextField17">
               <Properties>
-                <Property name="text" type="java.lang.String" value="jTextField17"/>
+                <Property name="columns" type="int" value="5"/>
                 <Property name="name" type="java.lang.String" value="mobile"/>
               </Properties>
               <Events>
@@ -815,7 +818,7 @@
                 </Constraint>
               </Constraints>
             </Component>
-            <Component class="javax.swing.JLabel" name="jLabel18">
+            <Component class="javax.swing.JLabel" name="homeLabel">
               <Properties>
                 <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
                   <ResourceString bundle="SummaryTerms2.properties" key="home" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
@@ -829,7 +832,7 @@
             </Component>
             <Component class="javax.swing.JTextField" name="homePhoneTextField18">
               <Properties>
-                <Property name="text" type="java.lang.String" value="jTextField18"/>
+                <Property name="columns" type="int" value="5"/>
                 <Property name="name" type="java.lang.String" value="homePhone"/>
               </Properties>
               <Events>
@@ -841,10 +844,10 @@
                 </Constraint>
               </Constraints>
             </Component>
-            <Component class="javax.swing.JLabel" name="jLabel20">
+            <Component class="javax.swing.JLabel" name="emailLabel">
               <Properties>
                 <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-                  <ResourceString bundle="" key="email" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
+                  <ResourceString bundle="SummaryTerms.properties" key="email" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
                 </Property>
               </Properties>
               <Constraints>
@@ -855,7 +858,7 @@
             </Component>
             <Component class="javax.swing.JTextField" name="emailTextField20">
               <Properties>
-                <Property name="text" type="java.lang.String" value="jTextField20"/>
+                <Property name="columns" type="int" value="6"/>
                 <Property name="name" type="java.lang.String" value="email"/>
               </Properties>
               <Constraints>
