back to summary.

--- a/gnumed/gnumed/test-area/sjtan/test-struts-3/pages/style.css
+++ b/gnumed/gnumed/test-area/sjtan/test-struts-3/pages/style.css
@@ -10,7 +10,7 @@
    TODO customize this sample style
    Syntax recommendation http://www.w3.org/TR/REC-CSS2/
 */
-h1,h2,h3 { background-color:#A47 }
+h1,h2,h3, h4, h5, h6 { background-color:#A47 }
         b   { color : #555}
       
 
